Fix Sidebar Menu on small screen resolutions

--- a/app/css/scss/_sidebar_notific.scss
+++ b/app/css/scss/_sidebar_notific.scss
@@ -3,6 +3,9 @@
   font-size: 15px;
   font-weight: bold;
   margin: 60px 0;
+  @media(max-width: 767px) {
+    margin: 20px 0;
+  }
   ul {
     li{
       margin: 10px 0;
